# py-model

./: README.md  main.py  pyproject.toml
demo/: ananlyze.py  foreign_response.json  mou.json  new_foreign_response.json
demo/new_approach/: analyze.py  models.py
src/: basemodels.py  copies.ipynb  custom_types.py  exceptions.py
tests/: test_basemodels.py
