[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Gaurav Mistary <gm179gaurav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
mypy = "^1.5.1"
pydantic = "^2.3.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
